Update open api doc
